WIP notes for empty settings fix

--- a/settings.json
+++ b/settings.json
@@ -1,5 +1,4 @@
 {
   "files": [],
-  "last_run": "2021-06-30T16:18:32Z",
-  "today": "2021-06-30T17:14:29Z"
+  "last_run": "1921-06-30T00:00:00Z"
 }
